# rmtools

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python.yml
rmtools/: __init__.py  add_matching.py  argparsing.py  check_latest_versions.py  create_project.py  external.py  find_project.py  hostingapi.py  metadata_parse.py  netreq.py  rmapi.py
tests/: test_add_matching.py  test_check_latest_versions.py  test_create_project.py  test_external.py  test_find_project.py  test_hostingapi.py  test_metadata_parse.py
