[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "rmtools"
description = "Tools to use with https://release-monitoring.org/ (anitya)"
version = "0"
readme = "README.md"
authors = [{name = "Dan Fandrich", email = "dan@coneharvesters.com"}]
license = {text = "GPLv2+"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Users",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "requests >= 2.25.1, <= 2.32.3",
    "PyYAML == 5.3.1, <= 6.0.1",
]

# The version dependencies listed are conservative and reflect ones that have
# actually been tested
[project.optional-dependencies]
dev = [
    "flake8 >= 5.0.4, <= 7.1.1",
    "flake8-builtins",
    "flake8-import-order",
    "flake8-pyproject",
    "pytype >= 2023.9.19, <= 2024.4.11"
]

[project.urls]
#Homepage = "https://github.com/dfandrich/rmtools"

[project.scripts]
check-latest-versions = "rmtools.check_latest_versions:main"

[tool.setuptools]
packages = ["rmtools"]
license-files = ["COPYING"]
include-package-data = false

[tool.flake8]
max-line-length = 100
