[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "rmtools"
description = "Tools to use with https://release-monitoring.org/ (anitya)"
version = "0.1dev"
readme = "README.md"
authors = [{name = "Dan Fandrich", email = "dan@coneharvesters.com"}]
license = {text = "GPLv2+"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Users",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9,<3.13"
# The version dependencies listed are conservative and reflect ones that have
# actually been tested
dependencies = [
    "requests >= 2.25.1, <= 2.32.4",
    "PyYAML == 5.3.1, <= 6.0.1",
]

[project.optional-dependencies]
dev = [
    "flake8 >= 5.0.4, < 8",
    "flake8-assertive",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-classmethod-staticmethod",
    "flake8-comprehensions",
    "flake8-datetimez",
    "flake8-deprecated",
    "flake8-docstrings",
    "flake8-get-chaining",
    "flake8-import-order",
    "flake8-mutable",
    "flake8-no-pep420",
    "flake8-noqa",
    "flake8-picky-parentheses",
    "flake8-pie",
    "flake8-plus",  # This isn't compatible with python 3.9
    "flake8-pyproject",
    "flake8-quotes",
    "flake8-raise",
    "flake8-requirements",
    "flake8-return",
    "flake8-sfs",
    "flake8-simplify",
    "flake8-super",
    "flake8-warnings",
    "flake8-wot",
    "pytype >= 2023.9.19, <= 2024.10.11"
]

[project.urls]
#Homepage = "https://github.com/dfandrich/rmtools"

[project.scripts]
check-latest-versions = "rmtools.check_latest_versions:main"
add-matching = "rmtools.add_matching:main"
find-project = "rmtools.find_project:main"
create-project = "rmtools.create_project:main"
metadata-parse = "rmtools.metadata_parse:main"

[tool.setuptools]
packages = ["rmtools"]
license-files = ["COPYING"]
include-package-data = false

[tool.flake8]
ignore = ["W503", "E741", "E501", "D102", "D103", "D107", "B001", "IFS001", "NQA102", "PAR101",
          "PAR103", "PIE803", "PLU002", "SFS301", "SIM115", "SIM904"]
max-line-length = 100
docstring-convention = "google"
blanks-before-imports = 1
