[metadata]
name = rmtools
summary = Tools to use with https://release-monitoring.org/
version = 0
description = Client tools to using the https://release-monitoring.org/ service.
long_description_file = README.md
author = Dan Fandrich
author_email = dan@coneharvesters.com
#home_page = https://github.com/dfandrich/rmtools
license = GPLv2+
license_files = COPYING
classifiers = 
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Users
    Natural Language :: English
    Topic :: Utilities
    Typing :: Typed

[options]
install_requires =
    requests
    PyYAML
packages = rmtools
setup_requires = 
    flake8

[options.entry_points]
console_scripts = 
    check-latest-versions = rmtools.check_latest_versions:main

[flake8]
max-line-length = 100
